# libuv

./: AUTHORS  CMakeLists.txt  README.md  vcbuild.bat
include/: uv-unix.h  uv-win.h  uv.h
src/: inet.c  queue.h
src/unix/: core.c  fs.c  internal.h  pipe.c  process.c  stream.c  tty.c  udp.c
src/win/: atomicops-inl.h  core.c  error.c  fs-event.c  fs.c  getaddrinfo.c  pipe.c  poll.c  process.c  tcp.c  thread.c  threadpool.c  tty.c  udp.c  util.c  winapi.c  winapi.h  winsock.c  winsock.h
src/win/psapi/: readme.txt
test/: test-fs-event.c  test-fs.c  test-spawn.c
win32/: libuv.dsp  libuv.dsw
